--- a/angularrecrutadoresapp/angular.json
+++ b/angularrecrutadoresapp/angular.json
@@ -5,7 +5,32 @@
   "projects": {
     "angularrecrutadoresapp": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:class": {
+          "skipTests": true
+        },
+        "@schematics/angular:component": {
+          "skipTests": true
+        },
+        "@schematics/angular:directive": {
+          "skipTests": true
+        },
+        "@schematics/angular:guard": {
+          "skipTests": true
+        },
+        "@schematics/angular:interceptor": {
+          "skipTests": true
+        },
+        "@schematics/angular:pipe": {
+          "skipTests": true
+        },
+        "@schematics/angular:resolver": {
+          "skipTests": true
+        },
+        "@schematics/angular:service": {
+          "skipTests": true
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -96,6 +121,6 @@
     }
   },
   "cli": {
-    "analytics": "3b9d595a-b973-4f1c-81f2-253fbe7b5d6b"
+    "analytics": false
   }
 }
