--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,11 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /AngularRecrutadores
+/angularrecrutadoresapp.del.del
+/InfraEstrutura/Migrations/20221230230838_Inicial.Designer.cs
+/InfraEstrutura/Migrations/20221230230838_Inicial.cs
+/SistemaRecrutadores/Controllers/TecnologiasController.cs
+/SistemaRecrutadores/Controllers/TipoTecnologiasController.cs
+/SistemaRecrutadores/Controllers/UsersController.cs
+/SistemaRecrutadores/Controllers/WeatherForecastController.cs
+/SistemaRecrutadores/appsettings.Development.json
